--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "license": "MIT",
     "minimum-stability": "stable",
+    "version": "2.2.0",
     "require": {
         "php": "^8.2",
         "sylius/sylius": "^2.2"
