--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,8 @@ jobs:
             fail-fast: false
             matrix:
                 php: ["8.3"]
-                symfony: ["^6.4", "^7.4"]
-                sylius: ["~2.0.0", "~2.1.0", "~2.2.0"]
+                symfony: ["^7.4"]
+                sylius: ["~2.2.0"]
                 database: ["mysql:8.4"]
                 node: ["22.x"]
 
